--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -23,11 +23,11 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="receiving.html">Annahme</a>
+                <li class="nav-item" todo-sec:authorize="isAuthenticated()">
+                    <a class="nav-link" href="receiving.html" th:text="#{orders.receiving}" th:href="@{/receiving}">Receiving</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="orders.html">Aufträge</a>
+                <li class="nav-item" todo-sec:authorize="isAuthenticated()">
+                    <a class="nav-link" href="orders.html" th:text="#{orders}" th:href="@{/orders}">Orders</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle"
