--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item" todo-sec:authorize="isAuthenticated()">
-                    <a class="nav-link" href="receiving.html" th:text="#{orders.receiving}" th:href="@{/receiving}">Receiving</a>
+                    <a class="nav-link" href="receiving.html" th:text="#{orders.receiving}" th:href="@{/orders/receiving}">Receiving</a>
                 </li>
                 <li class="nav-item" todo-sec:authorize="isAuthenticated()">
                     <a class="nav-link" href="orders.html" th:text="#{orders}" th:href="@{/orders}">Orders</a>
