refactor to use extends instead of OneToOne

--- a/src/main/resources/templates/cost.html
+++ b/src/main/resources/templates/cost.html
@@ -5,7 +5,8 @@
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
 
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet"
+          th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
 
     <title>Annahme - Kosten</title>
 </head>
@@ -14,11 +15,10 @@
 
 <div class="container mt-md-5">
     <h1>Annahme - Kosten</h1>
-    <form action="ticket.html">
+    <form action="ticket.html" th:action="@{/orders/ticket}">
         <div class="form-group form-check">
             <input class="form-check-input" id="paid" required type="checkbox">
-            <label class="form-check-label" for="paid">Der Kunde hat 1,54€ bezahlt.</label>
-            <!-- Wird automatisch ermittelt -->
+            <label class="form-check-label" for="paid">Der Kunde hat <strong th:text="${total}"></strong> bezahlt.</label>
         </div>
 
         <button class="btn btn-success" type="submit">Auftragszettel generieren</button>
@@ -27,16 +27,17 @@
 
 <footer th:replace="fragments :: footer"></footer>
 
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script crossorigin="anonymous"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+        src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        th:src="@{/webjars/jquery/jquery.js}"></script>
 <script crossorigin="anonymous"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        th:src="@{/webjars/popper/popper.js}"></script>
 <script crossorigin="anonymous"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </body>
 </html>
