--- a/src/main/resources/templates/finance.html
+++ b/src/main/resources/templates/finance.html
@@ -29,7 +29,7 @@
             <td>Knöpfe</td>
             <td></td>
             <td>
-                <a class="btn btn-primary" href="#" role="button">Löschen</a>
+                <a class="btn btn-danger" href="#" role="button">Löschen</a>
             </td>
         </tr>
         <tr>
@@ -38,12 +38,12 @@
             <td>Waschmittel</td>
             <td></td>
             <td>
-                <a class="btn btn-primary" href="#" role="button">Löschen</a>
+                <a class="btn btn-danger" href="#" role="button">Löschen</a>
             </td>
         </tr>
         </tbody>
     </table>
-    <a class="btn btn-primary mt-2" href="#">Neues Finanz Eintrag</a>
+    <a class="btn btn-info mt-2" href="#">Neues Finanz Eintrag</a>
 </div>
 
 <footer th:replace="fragments :: footer"></footer>
