--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -16,12 +16,12 @@
 <div class="container mt-md-5">
     <h1>Aufträge</h1>
 
-    <div class="card mt-2">
+    <div class="card mt-2" th:each="order : ${orders}">
         <div class="card-header">
             <em>
                 Blauer Frack
             </em>
-            - 8adfdf53-0e11-499f-af36-efbc9db8a7f9
+            - <span th:text="${order.getId()}">8adfdf53-0e11-499f-af36-efbc9db8a7f9</span>
         </div>
         <div class="card-body">
             <h5 class="card-title">Nähservice (Knöpfe)</h5>
@@ -30,11 +30,11 @@
                     <tbody>
                     <tr>
                         <th scope="row">Eingang</th>
-                        <td>13.03.2019</td>
+                        <td th:text="${order.getInbound()}">13.03.2019</td>
                     </tr>
                     <tr>
                         <th scope="row">Kunde</th>
-                        <td>Mark Zuckerberg</td>
+                        <td th:text="${order.getCustomer()}">Mark Zuckerberg</td>
                     </tr>
                     <tr>
                         <th scope="row">Bearbeitung</th>
@@ -51,77 +51,6 @@
                     </tbody>
                 </table>
             </div>
-        </div>
-    </div>
-
-    <div class="card mt-2">
-        <div class="card-header">
-            <em>
-                Alter Garagen-Schlüssel
-            </em>
-            - b1f26414-a8ab-468a-b2f1-22f60e2f2f7b
-        </div>
-        <div class="card-body">
-            <h5 class="card-title">Schlüsseldienst (Schlüssel kopieren)</h5>
-            <div class="card-text">
-                <table class="table table-borderless table-sm">
-                    <tbody>
-                    <tr>
-                        <th scope="row">Eingang</th>
-                        <td>12.05.2019</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Kunde</th>
-                        <td>Karl Schuster</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Materialien</th>
-                        <td>Schlüsselrohling</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Status</th>
-                        <td>In Warteschlange</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-
-    <div class="card mt-2">
-        <div class="card-header">
-            <em>
-                Hemd waschen
-            </em>
-            - d5496d4c-ae0f-47b3-a701-0e65f13d64b9
-        </div>
-        <div class="card-body">
-            <h5 class="card-title"> Schnellreinigung und Heißmangel (Wäsche)</h5>
-            <div class="card-text">
-                <table class="table table-borderless table-sm">
-                    <tbody>
-                    <tr>
-                        <th scope="row">Eingang</th>
-                        <td>12.01.2019</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Kunde</th>
-                        <td>Annalena Frei</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Materialien</th>
-                        <td>Waschmittel</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Status</th>
-                        <td>In Aufbewahrungsstelle</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div class="card-footer text-muted">
-            <a class="btn btn-warning" href="#">Auslösen für 1,50€</a>
         </div>
     </div>
 </div>
