--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -35,7 +35,7 @@
                         Verwaltung
                     </a>
                     <div aria-labelledby="navbarDropdown" class="dropdown-menu">
-                        <a class="dropdown-item" href="rooms.html">Räume</a>
+                        <a class="dropdown-item" href="rooms">Räume</a>
                         <a class="dropdown-item" href="material.html">Materialien</a>
                         <a class="dropdown-item" href="finance.html">Bilanzen</a>
                         <div class="dropdown-divider"></div>
