add debook method

--- a/src/main/resources/templates/rooms.html
+++ b/src/main/resources/templates/rooms.html
@@ -33,6 +33,9 @@
                 <form method="post" th:action="@{/rooms/{room}/bookFreeSlot(room=${room.id})}">
                     <button class="btn btn-info">Slot Buchen</button>
                 </form>
+                <form method="post" th:action="@{/rooms/{room}/debookFreeSlot(room=${room.id})}">
+                    <button class="btn btn-danger">Slot zurückbuchen</button>
+                </form>
 
             </div>
 
