add order overview

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="receiving.html" th:text="#{orders.receiving}">Receiving</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="orders.html" th:text="#{orders}">Orders</a>
+                    <a class="nav-link" href="orders.html" th:text="#{orders}" th:href="@{/orders}">Orders</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle"
