--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -38,7 +38,7 @@
                         <a class="dropdown-item" href="material.html" th:text="#{materials}">Materials</a>
                         <a class="dropdown-item" href="finance.html" th:text="#{finance.balance}">Balance</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="users.html" th:text="#{users.managment}">Nutzer-Verwaltung</a>
+                        <a class="dropdown-item" sec:authorize="hasRole('ADMIN')" th:href="@{/users}">Nutzerverwaltung</a>
                     </div>
                 </li>
                 <li class="nav-item" sec:authorize="isAnonymous()">
