--- a/src/main/resources/templates/receiving.html
+++ b/src/main/resources/templates/receiving.html
@@ -15,6 +15,10 @@
 <div class="container mt-md-5">
     <h1 th:text="#{orders.receiving}">Receiving</h1>
     <form action="cost.html" th:object="${form}" method="post" th:action="@{/orders/receiving}">
+        <div class="alert alert-danger" role="alert" th:each="err : ${#fields.errors('*')}" th:text="${err}">
+            The item description must not be empty.
+        </div>
+
         <h3 th:text="#{orders.order}">Order</h3>
         <div class="form-group">
             <label for="customer" th:text="#{orders.customer.name}">Customer's Name</label>
@@ -22,7 +26,8 @@
         </div>
         <div class="form-group">
             <label for="description" th:text="#{orders.description}">Description of the Item</label>
-            <input class="form-control" id="description" placeholder="Beschreibung" required type="text" th:field="*{description}">
+            <input class="form-control" id="description" placeholder="Beschreibung" required type="text"
+                   th:field="*{description}">
         </div>
 
         <h3 th:text="#{orders.service}">Service</h3>
@@ -30,7 +35,8 @@
             <label for="service" th:text="#{orders.service}">Service</label>
             <select class="form-control" id="service" th:field="*{service}" required>
                 <option th:each="service : ${services}" th:value="${service.getId()}"
-                        th:text="#{'orders.service.' + ${service.getName()}}">Kludge (Seam)</option>
+                        th:text="#{'orders.service.' + ${service.getName()}}">Kludge (Seam)
+                </option>
             </select>
         </div>
 
