--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -36,7 +36,7 @@
                     <div aria-labelledby="navbarDropdown" class="dropdown-menu">
                         <a class="dropdown-item" href="rooms.html" th:text="#{rooms}">Rooms</a>
                         <a class="dropdown-item" href="material.html" th:text="#{materials}">Materials</a>
-                        <a class="dropdown-item" href="finance.html" th:text="#{finance.balance}">Balance</a>
+                        <a class="dropdown-item" href="finance.html" th:text="#{finance.balance}" th:href="@{/finance}">Balance</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" sec:authorize="hasRole('ADMIN')" th:href="@{/users}">Nutzerverwaltung</a>
                     </div>
