--- a/src/main/resources/templates/cost.html
+++ b/src/main/resources/templates/cost.html
@@ -14,7 +14,7 @@
 
 <div class="container mt-md-5">
     <h1 th:text="#{orders.receiving.price}">Receiving - Price</h1>
-    <form action="ticket.html" todo-th:action="@{/orders/ticket}" method="post">
+    <form action="ticket.html" th:action="@{/orders/ticket}" method="post">
         <div class="form-group form-check">
             <input class="form-check-input" id="paid" required type="checkbox">
             <label class="form-check-label" for="paid"><strong th:text="#{orders.receiving.checkbox.paid(${total})}">The customer paid 10EUR.</strong></label>
