--- a/src/main/resources/templates/entries.html
+++ b/src/main/resources/templates/entries.html
@@ -10,30 +10,21 @@
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
 
-    <title>Räume</title>
+    <title>Entries</title>
 </head>
 <body>
 <nav th:replace="fragments :: navigation"></nav>
 
 <div class="container mt-md-5">
-    <h1>Räume</h1>
+    <h1>Einträge</h1>
 
-    <div class="card mt-2" th:each="room : ${rooms}">
-        <div class="card-header">
-            <h3 th:text="${room.name}"></h3>
-        </div>
-        <div class="card-footer text-muted">
-            <div class = "btn-toolbar">
-                <form method="post" th:action="@{/rooms/{room}/delete(room=${room.id})}">
-                    <button class="btn btn-danger">Raum löschen</button>
-                </form>
-                <form method="post" th:action="@{/rooms/{room}/showEntries(room=${room.id})}" th:href="entries.html">
-                    <button class="btn btn-primary">Einträge anzeigen</button>
-                </form>
-            </div>
 
-        </div>
+    <div class="card mt-2" th:each="entry : ${entrySet}" th:action="@{/rooms/{id}/showEntries}">
+    <div class="card-header">
+        <h3 th:text="${entry.id}"></h3>
     </div>
+    <div class="card-footer text-muted"></div>
+</div>
 
 </div>
 
