--- a/src/main/resources/templates/finance.html
+++ b/src/main/resources/templates/finance.html
@@ -8,12 +8,34 @@
           rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
 
     <title th:text="#{finance.balance}">Financen</title>
+
 </head>
 <body>
 <nav th:replace="fragments :: navigation"></nav>
 
 <div class="container mt-md-5">
 
+    <h1>Finance</h1>
+    <table class="table">
+        <thead>
+        <tr>
+            <th scope="col">ID</th>
+
+            <th scope="col">Datum</th>
+
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="item: ${finance}">
+            <th scope="row" th:text="${item.id}">1</th>
+
+            <td th:text="${item.date}">12.01.2019</td>
+        </tr>
+        </tbody>
+    </table>
+
+
+</div>
 
 
 
