--- a/src/main/resources/templates/entries.html
+++ b/src/main/resources/templates/entries.html
@@ -19,10 +19,10 @@
     <h1>Einträge</h1>
 
     <div>
-        <form method="post" th:action="@{/rooms/{id}/showPreviousEntries}">
+        <form method="post" th:action="@{/rooms/{id}/showPreviousEntries(id=${id})}">
             <button class="btn btn-danger float-left">vorherige Einträge</button>
         </form>
-        <form method="post" th:action="@{/rooms/{id}/showNextEntries}" th:href="entries.html">
+        <form method="post" th:action="@{/rooms/{id}/showNextEntries(id=${id})}" th:href="entries.html">
             <button class="btn btn-primary float-right">nächste Einträge</button>
         </form>
     </div>
