--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -29,7 +29,8 @@
             <th scope="row" th:text="${staff.lastName()}">Pan</th>
             <td th:text="${staff.getFirstName()}">Peter</td>
             <td th:text="${staff.getUserName()}">pperters</td>
-            <td th:text="${#strings.listJoin(staff.getSkills(), ', ')}">
+            <td th:if="${staff.getSkills().isEmpty()}" text="">
+            <td th:unless="${staff.getSkills().isEmpty()}" th:text="${#strings.setJoin(#messages.listMsg(#strings.setPrepend(staff.getServices(), 'orders.service.')), ', ')}">
             </td>
             <td>
                 <div class="btn-group">
